# fzfr

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  fzfr  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml  semgrep.yml
.semgrep/: semgrep.yml
examples/: remotely-fzf
scripts/: build_single_file.py  check_imports.py  generate_examples.py
src/fzfr/: __init__.py  __main__.py  _script.py  archive.py  backends.py  cache.py  config.py  copy.py  dispatch.py  internal.py  open.py  preview.py  remote.py  search.py  ssh.py  state.py  tty.py  utils.py  workbase.py
src/remotely/: __init__.py  __main__.py  _script.py  archive.py  backends.py  cache.py  config.py  copy.py  dispatch.py  gc.py  internal.py  list.py  open.py  open_cmd.py  preview.py  preview_cmd.py  remote.py  search.py  session.py  ssh.py  state.py  tty.py  utils.py  workbase.py
tests/: test_fzfr.py  test_remotely.py
