[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remotely-ssh"
# To release: update VERSION in src/remotely/_script.py only.
dynamic = ["version"]
description = "Fuzzy file search for local and remote filesystems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["fzf", "fuzzy", "search", "ssh", "remote", "terminal", "cli", "television"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",          # linter + formatter (replaces flake8, isort, black)
    "pre-commit>=3.0.0",    # git hook runner
    "pyright>=1.1.0",       # type checker (optional, used by VS Code Pylance)
    "pytest>=7.0.0",        # test runner (unittest also works, pytest gives better output)
]

[project.scripts]
remotely                = "remotely:main"
remotely-preview        = "remotely:main"
remotely-open           = "remotely:main"
remotely-remote-reload  = "remotely:main"
remotely-remote-preview = "remotely:main"
remotely-copy           = "remotely:main"

[project.urls]
Homepage   = "https://github.com/djg11/remotely"
Repository = "https://github.com/djg11/remotely"
Issues     = "https://github.com/djg11/remotely/issues"

[tool.setuptools]
# py-modules is used for PyPI packaging (cp remotely remotely.py before python -m build).
# For editable dev installs (pip install -e .[dev]), setuptools finds
# the src/remotely/ package via package-dir below.
py-modules = ["remotely"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "remotely._script.VERSION"}

# -- Ruff: linter + formatter --------------------------------------------------
# Ruff replaces flake8, isort, pyupgrade, and black in one tool.
# Run:  ruff check src/ tests/     (lint)
#       ruff format src/ tests/    (format)
#       ruff check --fix src/      (auto-fix safe issues)
# Or:   make lint / make format

[tool.ruff]
target-version = "py310"
line-length    = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "SIM",  # flake8-simplify (simplifiable code patterns)
    "TID",  # flake8-tidy-imports (banned / absolute imports)
]
ignore = [
    "E501",   # line too long -- handled by ruff format, not lint
    "B006",   # mutable default argument -- used intentionally in dataclasses
    "B007",   # loop control variable not used -- common in fzf callback stubs
    "SIM102", # nested if -> combined -- sometimes less readable
    "SIM105", # contextlib.suppress -- requires top-level import; late imports
              # are forbidden in this codebase (build script strips them).
              # Keep explicit try/except/pass instead.
    "SIM108", # ternary -- sometimes less readable than if/else
    "SIM110", # any() instead of for loop -- ruff marks this as unsafe fix;
              # the for-loop form is clearer when the loop body has a return.
    "UP007",  # X | Y union syntax -- keep Optional[X] for clarity
]

[tool.ruff.lint.isort]
known-first-party = ["remotely"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"

# -- Pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
