[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remotely-ssh"
# To release: update VERSION in src/remotely/_script.py only.
dynamic = ["version"]
description = "Fuzzy file search for local and remote filesystems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
keywords = ["fzf", "fuzzy", "search", "ssh", "remote", "terminal", "cli", "television"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
# dataclasses is stdlib in 3.7+; needed for 3.6 only
dependencies = [
    "dataclasses; python_version < '3.7'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=3.0.0",
    "pyright>=1.1.0",
    "pytest>=7.0.0",
]

[project.scripts]
remotely                = "remotely:main"
remotely-preview        = "remotely:main"
remotely-open           = "remotely:main"
remotely-remote-reload  = "remotely:main"
remotely-remote-preview = "remotely:main"
remotely-copy           = "remotely:main"

[project.urls]
Homepage   = "https://github.com/djg11/remotely"
Repository = "https://github.com/djg11/remotely"
Issues     = "https://github.com/djg11/remotely/issues"

[tool.setuptools]
py-modules = ["remotely"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "remotely._script.VERSION"}

# -- Ruff: linter + formatter --------------------------------------------------
# NOTE: ruff itself requires Python 3.7+ to RUN (as a dev tool on the local
# machine), but the code it lints targets Python 3.6.

[tool.ruff]
target-version = "py36"
line-length    = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "SIM",  # flake8-simplify (simplifiable code patterns)
    "TID",  # flake8-tidy-imports (banned / absolute imports)
]
ignore = [
    "E501",   # line too long -- handled by ruff format, not lint
    "B006",   # mutable default argument -- used intentionally in dataclasses
    "B007",   # loop control variable not used -- common in fzf callback stubs
    "SIM102", # nested if -> combined -- sometimes less readable
    "SIM105", # contextlib.suppress -- requires top-level import
    "SIM108", # ternary -- sometimes less readable than if/else
    "SIM110", # any() instead of for loop
    "UP007",  # X | Y union syntax -- keep Optional[X] for 3.6 compat
    "UP006",  # use list instead of List -- keep List for 3.6 compat
    "UP035",  # typing imports deprecated -- keep for 3.6 compat
]

[tool.ruff.lint.isort]
known-first-party = ["remotely"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"

# -- Pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
