[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remotely-ssh"
# To release: update VERSION in src/remotely/_script.py only.
dynamic = ["version"]
description = "Zero-install SSH file transport for fuzzy-finders (fzf, Television, etc.)"
readme = "README.md"
license = { file = "LICENSE" }
# Runtime target: the built script must run on Python 3.6+ (CentOS 7 / RHEL 7).
# Dev toolchain: requires Python 3.10+ (ruff, pyright, modern typing syntax).
requires-python = ">=3.6"
keywords = ["ssh", "remote", "search", "preview", "fzf", "television", "terminal", "cli", "fuzzy-finder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
# dataclasses is stdlib in 3.7+; the backport is only needed on 3.6.
dependencies = [
    "dataclasses; python_version < '3.7'",
]

[project.optional-dependencies]
# Dev extras require Python 3.10+ to install. Do not use these in a 3.6
# environment -- use 'make test36' for runtime verification under Python 3.6.
dev = [
    "ruff>=0.15.0",
    "pre-commit>=3.0.0",
    "pyright>=1.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
remotely                = "remotely:main"
remotely-preview        = "remotely:main"
remotely-remote-reload  = "remotely:main"
remotely-remote-preview = "remotely:main"

[project.urls]
Homepage   = "https://github.com/djg11/remotely"
Repository = "https://github.com/djg11/remotely"
Issues     = "https://github.com/djg11/remotely/issues"
Changelog  = "https://github.com/djg11/remotely/releases"

[tool.setuptools]
py-modules = ["remotely"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "remotely._script.VERSION"}

# -- Ruff: linter + formatter --------------------------------------------------
# ruff itself requires Python 3.7+ to RUN (dev toolchain; we use 3.10+).
#
# target-version controls which Python syntax ruff treats as valid in the
# SOURCE CODE it lints. py36 was removed from ruff in a recent release, so
# we use py37 -- the lowest still accepted. Runtime 3.6 compatibility is
# enforced separately by the UP00x ignores below, which prevent ruff from
# suggesting syntax that does not exist in 3.6 (X | Y unions, built-in
# generics, deprecated typing imports, etc.).

[tool.ruff]
target-version = "py37"
line-length    = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "SIM",  # flake8-simplify (simplifiable code patterns)
    "TID",  # flake8-tidy-imports (banned / absolute imports)
]
ignore = [
    "E501",   # line too long -- handled by ruff format, not lint
    "B006",   # mutable default argument -- used intentionally in dataclasses
    "B007",   # loop control variable not used
    "SIM102", # nested if -> combined -- sometimes less readable
    "SIM105", # contextlib.suppress -- requires top-level import
    "SIM108", # ternary -- sometimes less readable than if/else
    "SIM110", # any() instead of for loop
    # The UP rules below keep the source compatible with the Python 3.6
    # runtime target. ruff would otherwise suggest modernising these to
    # syntax that does not exist in 3.6.
    "UP007",  # X | Y union syntax -- keep Optional[X] for 3.6 runtime compat
    "UP006",  # use list instead of List -- keep List for 3.6 runtime compat
    "UP035",  # typing imports deprecated -- keep for 3.6 runtime compat
]

[tool.ruff.lint.isort]
known-first-party = ["remotely"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false
line-ending               = "auto"

# -- Pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]

# -- Pyright -------------------------------------------------------------------
# Configured separately in pyrightconfig.json (pythonVersion = "3.10").
# Pyright analyses source at the dev toolchain level; the UP00x ruff ignores
# above ensure the source stays compatible with the 3.6 runtime target.
